[gd_scene load_steps=5 format=3 uid="uid://brqa4emc67drg"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_8mpn6"]
[ext_resource type="PackedScene" uid="uid://dieljgd8ai41" path="res://scenes/world.tscn" id="2_yh8q3"]
[ext_resource type="Texture2D" uid="uid://btpyplacruvgg" path="res://images/cat_player_animation/Jump3.png" id="3_0i6do"]
[ext_resource type="Texture2D" uid="uid://tbx3o305yo5b" path="res://images/helmet.png" id="4_aoqtt"]

[node name="menu" type="Node2D"]
script = ExtResource("1_8mpn6")

[node name="menu_world" parent="." instance=ExtResource("2_yh8q3")]
position = Vector2(4, -2)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 505)
scale = Vector2(0.439739, 0.422716)
texture = ExtResource("3_0i6do")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-56.8521, -78.0667)
scale = Vector2(0.383097, 0.335929)
texture = ExtResource("4_aoqtt")

[node name="start_button" type="Button" parent="."]
offset_left = 138.0
offset_top = 249.0
offset_right = 298.0
offset_bottom = 286.0

[node name="quit_button" type="Button" parent="."]
offset_left = 828.0
offset_top = 249.0
offset_right = 988.0
offset_bottom = 286.0

[node name="load_button" type="Button" parent="."]
offset_left = 368.0
offset_top = 249.0
offset_right = 528.0
offset_bottom = 286.0

[node name="options_button" type="Button" parent="."]
offset_left = 598.0
offset_top = 249.0
offset_right = 758.0
offset_bottom = 286.0

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="options_button" to="." method="_on_options_button_pressed"]
